Feat: #8 테스트 코드 추가 및 리펙토링